--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="canonical" href="https://devchecklistkit.com" />
     <title>DevChecklistKit</title>
     <!-- Tailwind CSS CDN -->
-  <link href="./output.css" rel="stylesheet">
+  <link href="./assets/css/output.css" rel="stylesheet">
 </head>
 
 <body class="bg-gray-800 text-white">
@@ -330,7 +330,7 @@
                 class="text-blue-400 hover:text-blue-300 hover:underline transition-colors duration-200">GitHub</a>
         </p>
     </footer>
-    <script src="clipboard.js" defer></script>
+    <script src="./assets/js/clipboard.js" defer></script>
 </body>
 
 </html>
