--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   content="default-src 'self'; style-src 'self'; script-src 'self';" />
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta name="Referrer-Policy" content="no-referrer-when-downgrade" />
     <meta name="description"
         content="DevChecklistKit - The ultimate checklist for web developers. Ship faster, safer, and with confidence. Use, copy, and share best practices for modern web projects.">
@@ -119,7 +118,7 @@
                         <h3 class="text-base md:text-lg font-semibold text-white">
                             dev-checklist-kit.md
                         </h3>
-                        <button onclick="copySection('markdown-content')" aria-label="Copy command to clipboard"
+                        <button id="copy-section-button" aria-label="Copy command to clipboard"
                             title="Copy to clipboard"
                             class="text-sm bg-gray-200 text-gray-900 font-medium py-1 px-3 rounded transition-colors active:translate-y-px transition duration-200 ease-out">
                             Copy <span class="hidden md:inline-block">Markdown</span>
