--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="Content-Security-Policy"
+    <meta http-equiv="Content-Security-Policy"
   content="default-src 'self'; style-src 'self'; script-src 'self';" />
     <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
@@ -15,6 +15,10 @@
         content="DevChecklistKit, web development, checklist, best practices, web developers, modern web projects, deployment, performance, security, SEO, accessibility">
     <meta name="author" content="DevChecklistKit Team">
     <link rel="canonical" href="https://devchecklistkit.com" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+    <link rel="apple-touch-icon" href="./assets/images/favicon.png">
+    <meta name="theme-color" content="#1F2937">
     <title>DevChecklistKit</title>
     <!-- Tailwind CSS CDN -->
   <link href="./assets/css/output.css" rel="stylesheet">
@@ -24,7 +28,9 @@
     <header>
         <nav class="bg-gray-800 p-4 text-white flex justify-between items-center">
             <div class="flex justify-between items-center">
-                <a href="#" class="text-white text-lg font-bold">DevChecklistKit</a>
+                <a href="#" class="flex items-center space-x-3">
+                    <img src="./assets/images/logo-check.png" alt="DevChecklistKit Logo" class="h-10 w-auto" width="200">
+                </a>
             </div>
             <ul class="flex space-x-4">
                 <li><a href="https://github.com/matifandy8/DevChecklistKit" target="_blank"
